# Python-utilities

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt
lib/: bash.py  basic_functions.py  dag.py  exceptions.py  extended_enum.py  file_system_object.py  file_utils.py  git_commands.py  json_key_path.py  json_object.py  logger.py  overrides.py  string_utils.py  text_processor_abc.py  thread_with_return.py
test/: test_basic_functions.py  test_extended_enum.py  test_file_system_object.py  test_json_key_path.py  test_json_object.py  test_string_utils.py
tools/: include_hierarchy.py  installLight.py  install_light.py  makeCppProject.py  templateConverter.py
tools/AVRO/: README.md  avro_kafka.py  check_avro.py  data.json  schema.avsc
tools/bulk_replacements/: replace_in_files.py
tools/cpp_project/: .env  Dockerfile  README.md  abc_file_set_creator.py  bash_aliases_for_docker  basic_file_set_creator.py  class_file_set_creator.py  cmake_file_set_creator.py  comment_style.py  compose.yml  docker-compose.yml  file_name_mapper.py  grpc_file_set_creator.py  grpc_messaging_type.py  main_only_file_set_creator.py  make_cpp_project.py  project_creator.py  requirements.txt  simple_file_set_creator.py  template_converter.py  template_file_set_creator.py
tools/cpp_project/templates/: .clang-tidy  .client-server.env  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile._client  Dockerfile._server  Doxyfile  bash_aliases_for_docker  do_build  docker-compose.client-server.yml  docker-compose.yml
tools/cpp_project/templates/include/: class_include.h  grpc_async_client.h  grpc_async_client2.h  grpc_async_service.h  grpc_callback_client.h  grpc_callback_service.h  grpc_client.h  grpc_service.h  template.h
tools/cpp_project/templates/licence/: licence
tools/cpp_project/templates/protos/: simple_connect.proto
tools/cpp_project/templates/src/: CMakeLists.txt
tools/cpp_project/templates/src/classes/: CMakeLists.txt  class_source.cc
tools/cpp_project/templates/src/grpc/: CMakeLists.txt  grpc_async_client.cc  grpc_async_client2.cc  grpc_async_service.cc  grpc_callback_client.cc  grpc_callback_service.cc  grpc_client.cc  grpc_service.cc
tools/cpp_project/templates/src/grpc/cmake/: common.cmake
tools/cpp_project/templates/src/services/: CMakeLists.txt  CMake_grpc.part  CMake_project.part  grpc_async_client_main.cc  grpc_async_server_main.cc  grpc_callback_client_main.cc  grpc_callback_server_main.cc  grpc_client_main.cc  grpc_server_main.cc  project_main.cc
tools/cpp_project/templates/test/: CMakeLists.txt  class_tests.cc  grpc_client_tests.cc  grpc_service_tests.cc  project_tests.cc  run_tests.cc  template_tests.cc
tools/crontab_to_schedule/: crontab_to_schedule.py
tools/gitlab/: check_merge_request.py  gitlab_tools.py
tools/gradle_scan/: dependencies.py  helm_chart_dependencies.py
tools/gtest_generator/: generate_tests.py
tools/jira/: jira_automation.py
tools/templates/: .client-server.env  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.client  Dockerfile.server  Doxyfile  bash_aliases_for_docker  do_build  docker-compose.client-server.yml  docker-compose.yml  makeDocker
tools/templates/include/: grpc_async_client.cc  grpc_async_client.h  grpc_async_client2.h  grpc_async_service.h  grpc_callback_client.h  grpc_callback_service.h  grpc_client.h  grpc_service.h  project_include.h
tools/templates/licence/: licence
tools/templates/protos/: simple_connect.proto
tools/templates/src/: CMakeLists.txt  CMakeListsGrpc.txt  class_source.cc  grpc_async_client2.cc  grpc_async_client_main.cc  grpc_async_server_main.cc  grpc_async_service.cc  grpc_callback_client.cc  grpc_callback_client_main.cc  grpc_callback_server_main.cc  grpc_callback_service.cc  grpc_client.cc  grpc_client_main.cc  grpc_server_main.cc  grpc_service.cc  project_main.cc  project_source.cc
tools/templates/test/: CMakeLists.txt  project_tests.cc
tools/universe/: README.md  get_branch_details.py
