[tool.poetry]
name = "tools"
version = "0.1.0"
description = "Some useful libraries, tools and experimental stuff"
authors = ["Dieter J Kybelksties <github@kybelksties.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
