[[LICENCE]]

add_library([[PROJECT_NAME_TEMPLATE_LOWER]] STATIC
  [[PROJECT_NAME_TEMPLATE_LOWER]].cc
)

add_executable([[PROJECT_NAME_TEMPLATE_LOWER]]_exe [[PROJECT_NAME_TEMPLATE_LOWER]]_main.cc)
set_property(TARGET [[PROJECT_NAME_TEMPLATE_LOWER]]_exe PROPERTY OUTPUT_NAME [[PROJECT_NAME_TEMPLATE_LOWER]])
target_link_libraries([[PROJECT_NAME_TEMPLATE_LOWER]]_exe PRIVATE [[PROJECT_NAME_TEMPLATE_LOWER]])
